<?xml version="1.0"?>
<package format="3">
  <name>pointcloud2pcd</name>
  <version>1.0.0</version>
  <description>CONVERT POINTCloud2 To PCD</description>

  <maintainer email="2634070476@qq.com">grange</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>boost</depend>
  <depend>libpcl-all-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
